--- a/GameOfTheGenerals.Web/Views/Game/Board.cshtml
+++ b/GameOfTheGenerals.Web/Views/Game/Board.cshtml
@@ -1,6 +1,10 @@
 ﻿@model GameViewModel
 @using GameOfTheGenerals.Web.Models
 
+@section css{
+    <link href="~/css/game.css" rel="stylesheet" />
+}
+
 <div>
     <table id='game'></table>
 </div>
@@ -8,9 +12,5 @@
 @section scripts
     {
     <script src="~/js/jsboard.js"></script>
-    @*<script>
-        var b = jsboard.board({ attach: "game", size: "8x8", style: "checkerboard" });
-        b.cell("each").style({ width: "60px", height: "60px" });
-    </script>*@
     <script src="~/js/game.js" asp-append-version="true"></script>
 } 
